--- a/backend/commune/bittensor/bittensor_module.yaml
+++ b/backend/commune/bittensor/bittensor_module.yaml
@@ -3,7 +3,7 @@
 module: 'BittensorModule'
 # clients
 # client: get_config(client.manager)
-client: ['local']
+# client: ['local']
 
 network: nakamoto
 block: null
