--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reactflow/node-resizer": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +21,7 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
-    "reactflow": "^11.2.0",
+    "reactflow": "^11.3.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.2",
